avance test TerminalGestionada, 94,4% src